@@ -1,3 +1,6 @@
+* Wed Jun 20 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.5-0
+- Add both fqdn and hostname to user_specification entries by default
+
 * Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.4-0
 - Update upperbound on puppetlabs/concat version to < 5.0.0
 
